--- a/src/main/resources/Views/User/BookingWizard/BookingStep1-view.fxml
+++ b/src/main/resources/Views/User/BookingWizard/BookingStep1-view.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane stylesheets="@../../../Styles/User/BookingStep1.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingStep1Controller">
+<AnchorPane stylesheets="@../../../Styles/User/BookingStep1.css" style="-fx-background-color: #F4F7FE;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingStep1Controller">
    <children>
-      <ScrollPane fitToWidth="true" hbarPolicy="NEVER" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ScrollPane fitToWidth="true" fitToHeight="true" hbarPolicy="NEVER" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <content>
-            <VBox spacing="25.0" styleClass="wizard-container">
+            <VBox spacing="25.0" styleClass="wizard-container" style="-fx-background-color: white; -fx-background-radius: 0;">
                <children>
                   <VBox spacing="5.0">
                      <children>
