--- a/src/main/resources/Views/User/BookingWizard/BookingStep5-view.fxml
+++ b/src/main/resources/Views/User/BookingWizard/BookingStep5-view.fxml
@@ -7,30 +7,55 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.Insets?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingStep5Controller">
+<AnchorPane stylesheets="@../../../Styles/User/BookingWizard.css" style="-fx-background-color: #F4F7FE;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingStep5Controller">
    <children>
-      <VBox layoutX="20.0" layoutY="14.0" spacing="5.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="14.0">
+      <VBox spacing="20" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <padding>
+            <Insets bottom="20.0" left="30.0" right="30.0" top="25.0" />
+         </padding>
          <children>
-            <Label style="-fx-font-weight: bold;" text="Filter Vehicle Type" />
-            <HBox spacing="20.0">
+            <!-- Header -->
+            <VBox spacing="8">
                <children>
-                  <RadioButton fx:id="all_vehicle_radio" mnemonicParsing="false" selected="true" text="All">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="vehicle_type_group" />
-                     </toggleGroup>
-                  </RadioButton>
-                  <RadioButton fx:id="sedan_radio" mnemonicParsing="false" text="Sedan (4 Seater)" toggleGroup="$vehicle_type_group" />
-                  <RadioButton fx:id="van_radio" mnemonicParsing="false" text="Van (10 Seater)" toggleGroup="$vehicle_type_group" />
-                  <RadioButton fx:id="bus_radio" mnemonicParsing="false" text="Bus (50 Seater)" toggleGroup="$vehicle_type_group" />
+                  <Label styleClass="header-title" text="Choose Transportation" />
+                  <Label styleClass="header-subtitle" text="Select a vehicle that accommodates your group size" />
+               </children>
+            </VBox>
+            
+            <!-- Filter Section -->
+            <HBox alignment="CENTER_LEFT" spacing="15" style="-fx-background-color: #F8FAFF; -fx-background-radius: 12; -fx-padding: 15 20;">
+               <children>
+                  <FontAwesomeIconView glyphName="FILTER" size="14" style="-fx-fill: #4318FF;" />
+                  <Label style="-fx-font-weight: bold; -fx-text-fill: #2B3674;" text="Filter by Type:" />
+                  <HBox spacing="20">
+                     <children>
+                        <RadioButton fx:id="all_vehicle_radio" mnemonicParsing="false" selected="true" styleClass="radio-button" text="All">
+                           <toggleGroup>
+                              <ToggleGroup fx:id="vehicle_type_group" />
+                           </toggleGroup>
+                        </RadioButton>
+                        <RadioButton fx:id="sedan_radio" mnemonicParsing="false" styleClass="radio-button" text="🚗 Sedan (4 seats)" toggleGroup="$vehicle_type_group" />
+                        <RadioButton fx:id="van_radio" mnemonicParsing="false" styleClass="radio-button" text="🚐 Van (10 seats)" toggleGroup="$vehicle_type_group" />
+                        <RadioButton fx:id="bus_radio" mnemonicParsing="false" styleClass="radio-button" text="🚌 Bus (50 seats)" toggleGroup="$vehicle_type_group" />
+                     </children>
+                  </HBox>
                </children>
             </HBox>
+            
+            <!-- Vehicles List -->
+            <ScrollPane fitToWidth="true" hbarPolicy="NEVER" styleClass="scroll-pane" VBox.vgrow="ALWAYS">
+               <content>
+                  <VBox fx:id="vehicle_container" spacing="15">
+                     <padding>
+                        <Insets bottom="10.0" right="10.0" top="5.0" />
+                     </padding>
+                  </VBox>
+               </content>
+            </ScrollPane>
          </children>
       </VBox>
-      <ScrollPane fitToWidth="true" layoutX="20.0" layoutY="70.0" prefHeight="310.0" prefWidth="560.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="70.0">
-         <content>
-            <VBox fx:id="vehicle_container" spacing="10.0" />
-         </content>
-      </ScrollPane>
    </children>
 </AnchorPane>
