--- a/src/main/resources/Views/User/BookingWizard/BookingStep6-view.fxml
+++ b/src/main/resources/Views/User/BookingWizard/BookingStep6-view.fxml
@@ -2,35 +2,114 @@
 
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.geometry.Insets?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingStep6Controller">
+<AnchorPane stylesheets="@../../../Styles/User/BookingWizard.css" style="-fx-background-color: #F4F7FE;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingStep6Controller">
    <children>
-      <VBox layoutX="50.0" layoutY="20.0" prefHeight="360.0" prefWidth="500.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="20.0">
-         <children>
-            <Label style="-fx-font-weight: bold; -fx-font-size: 16;" text="Final Booking Summary" />
-            
-            <Label text="Client Name:" />
-            <Label fx:id="summary_name_lbl" style="-fx-font-weight: bold;" text="--" />
-            
-            <Label text="Travel Date:" />
-            <Label fx:id="summary_date_lbl" style="-fx-font-weight: bold;" text="--" />
-
-            <Label text="Selected Package:" />
-            <Label fx:id="summary_package_lbl" style="-fx-font-weight: bold;" text="--" />
-            
-            <Label text="Selected Hotel:" />
-            <Label fx:id="summary_hotel_lbl" style="-fx-font-weight: bold;" text="--" />
-            
-            <Label text="Selected Vehicle:" />
-            <Label fx:id="summary_vehicle_lbl" style="-fx-font-weight: bold;" text="--" />
-            
-            <Label style="-fx-font-weight: bold; -fx-font-size: 14;" text="Total Price:" />
-            <Label fx:id="total_price_lbl" style="-fx-font-size: 14; -fx-text-fill: green;" text="PHP 0.00" />
-            
-            <CheckBox fx:id="terms_condition_check" mnemonicParsing="false" text="I agree to the Terms and Conditions and Cancellation Policy." />
-         </children>
-      </VBox>
+      <ScrollPane fitToWidth="true" fitToHeight="true" hbarPolicy="NEVER" styleClass="scroll-pane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <content>
+            <VBox spacing="25" style="-fx-background-color: white;">
+               <padding>
+                  <Insets bottom="30.0" left="40.0" right="40.0" top="30.0" />
+               </padding>
+               <children>
+                  <!-- Header with Success Icon -->
+                  <VBox alignment="CENTER" spacing="15">
+                     <children>
+                        <StackPane>
+                           <Circle radius="40" style="-fx-fill: linear-gradient(to bottom right, #E8FFF6, #D4F7E8);" />
+                           <FontAwesomeIconView glyphName="CHECK" size="35" style="-fx-fill: #05CD99;" />
+                        </StackPane>
+                        <Label style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #2B3674;" text="Review Your Booking" />
+                        <Label styleClass="header-subtitle" text="Please review all details before confirming your booking" />
+                     </children>
+                  </VBox>
+                  
+                  <!-- Booking Details Card -->
+                  <VBox spacing="0" style="-fx-background-color: #F8FAFF; -fx-background-radius: 16; -fx-border-color: #E0E5F2; -fx-border-radius: 16;">
+                     <children>
+                        <!-- Customer Info -->
+                        <HBox alignment="CENTER_LEFT" spacing="15" style="-fx-padding: 20; -fx-border-color: transparent transparent #E0E5F2 transparent; -fx-border-width: 0 0 1 0;">
+                           <StackPane style="-fx-background-color: #E8E6FF; -fx-background-radius: 12; -fx-pref-width: 44; -fx-pref-height: 44; -fx-min-width: 44; -fx-min-height: 44;">
+                              <FontAwesomeIconView glyphName="USER" size="18" style="-fx-fill: #4318FF;" />
+                           </StackPane>
+                           <VBox spacing="3" HBox.hgrow="ALWAYS">
+                              <Label style="-fx-font-size: 11px; -fx-text-fill: #A3AED0; -fx-font-weight: bold;" text="CUSTOMER" />
+                              <Label fx:id="summary_name_lbl" style="-fx-font-size: 15px; -fx-font-weight: bold; -fx-text-fill: #2B3674;" text="--" />
+                           </VBox>
+                        </HBox>
+                        
+                        <!-- Travel Date -->
+                        <HBox alignment="CENTER_LEFT" spacing="15" style="-fx-padding: 20; -fx-border-color: transparent transparent #E0E5F2 transparent; -fx-border-width: 0 0 1 0;">
+                           <StackPane style="-fx-background-color: #FFF3E6; -fx-background-radius: 12; -fx-pref-width: 44; -fx-pref-height: 44; -fx-min-width: 44; -fx-min-height: 44;">
+                              <FontAwesomeIconView glyphName="CALENDAR" size="18" style="-fx-fill: #FFB547;" />
+                           </StackPane>
+                           <VBox spacing="3" HBox.hgrow="ALWAYS">
+                              <Label style="-fx-font-size: 11px; -fx-text-fill: #A3AED0; -fx-font-weight: bold;" text="TRAVEL DATE" />
+                              <Label fx:id="summary_date_lbl" style="-fx-font-size: 15px; -fx-font-weight: bold; -fx-text-fill: #2B3674;" text="--" />
+                           </VBox>
+                        </HBox>
+                        
+                        <!-- Package -->
+                        <HBox alignment="CENTER_LEFT" spacing="15" style="-fx-padding: 20; -fx-border-color: transparent transparent #E0E5F2 transparent; -fx-border-width: 0 0 1 0;">
+                           <StackPane style="-fx-background-color: #E6F9F5; -fx-background-radius: 12; -fx-pref-width: 44; -fx-pref-height: 44; -fx-min-width: 44; -fx-min-height: 44;">
+                              <FontAwesomeIconView glyphName="SUITCASE" size="18" style="-fx-fill: #05CD99;" />
+                           </StackPane>
+                           <VBox spacing="3" HBox.hgrow="ALWAYS">
+                              <Label style="-fx-font-size: 11px; -fx-text-fill: #A3AED0; -fx-font-weight: bold;" text="SELECTED PACKAGE" />
+                              <Label fx:id="summary_package_lbl" style="-fx-font-size: 15px; -fx-font-weight: bold; -fx-text-fill: #2B3674;" text="--" wrapText="true" />
+                           </VBox>
+                        </HBox>
+                        
+                        <!-- Hotel -->
+                        <HBox alignment="CENTER_LEFT" spacing="15" style="-fx-padding: 20; -fx-border-color: transparent transparent #E0E5F2 transparent; -fx-border-width: 0 0 1 0;">
+                           <StackPane style="-fx-background-color: #E8E6FF; -fx-background-radius: 12; -fx-pref-width: 44; -fx-pref-height: 44; -fx-min-width: 44; -fx-min-height: 44;">
+                              <FontAwesomeIconView glyphName="BUILDING" size="18" style="-fx-fill: #4318FF;" />
+                           </StackPane>
+                           <VBox spacing="3" HBox.hgrow="ALWAYS">
+                              <Label style="-fx-font-size: 11px; -fx-text-fill: #A3AED0; -fx-font-weight: bold;" text="ACCOMMODATION" />
+                              <Label fx:id="summary_hotel_lbl" style="-fx-font-size: 15px; -fx-font-weight: bold; -fx-text-fill: #2B3674;" text="--" wrapText="true" />
+                           </VBox>
+                        </HBox>
+                        
+                        <!-- Vehicle -->
+                        <HBox alignment="CENTER_LEFT" spacing="15" style="-fx-padding: 20;">
+                           <StackPane style="-fx-background-color: #FFECE9; -fx-background-radius: 12; -fx-pref-width: 44; -fx-pref-height: 44; -fx-min-width: 44; -fx-min-height: 44;">
+                              <FontAwesomeIconView glyphName="CAR" size="18" style="-fx-fill: #EE5D50;" />
+                           </StackPane>
+                           <VBox spacing="3" HBox.hgrow="ALWAYS">
+                              <Label style="-fx-font-size: 11px; -fx-text-fill: #A3AED0; -fx-font-weight: bold;" text="TRANSPORTATION" />
+                              <Label fx:id="summary_vehicle_lbl" style="-fx-font-size: 15px; -fx-font-weight: bold; -fx-text-fill: #2B3674;" text="--" wrapText="true" />
+                           </VBox>
+                        </HBox>
+                     </children>
+                  </VBox>
+                  
+                  <!-- Total Price Card -->
+                  <VBox alignment="CENTER" spacing="8" style="-fx-background-color: linear-gradient(to right, #4318FF, #6B4EFF); -fx-background-radius: 16; -fx-padding: 25;">
+                     <children>
+                        <Label style="-fx-font-size: 12px; -fx-text-fill: rgba(255,255,255,0.8);" text="TOTAL AMOUNT" />
+                        <Label fx:id="total_price_lbl" style="-fx-font-size: 32px; -fx-font-weight: bold; -fx-text-fill: white;" text="₱0.00" />
+                        <Label style="-fx-font-size: 11px; -fx-text-fill: rgba(255,255,255,0.7);" text="All taxes and fees included" />
+                     </children>
+                  </VBox>
+                  
+                  <!-- Terms and Conditions -->
+                  <HBox alignment="CENTER_LEFT" spacing="12" style="-fx-background-color: #FFFBF5; -fx-background-radius: 12; -fx-padding: 18; -fx-border-color: #FFE5C4; -fx-border-radius: 12;">
+                     <FontAwesomeIconView glyphName="INFO_CIRCLE" size="18" style="-fx-fill: #FFB547;" />
+                     <CheckBox fx:id="terms_condition_check" mnemonicParsing="false" style="-fx-text-fill: #2B3674;" text="I agree to the Terms and Conditions and Cancellation Policy" />
+                  </HBox>
+               </children>
+            </VBox>
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
