--- a/src/main/resources/Views/User/BookingWizard/NavigationButtons.fxml
+++ b/src/main/resources/Views/User/BookingWizard/NavigationButtons.fxml
@@ -3,19 +3,46 @@
 <?import de.jensd.fx.glyphs.fontawesome.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
 
-<AnchorPane prefHeight="25.0" prefWidth="327.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingNavigationController">
+<HBox alignment="CENTER" spacing="20" styleClass="navigation-container" 
+      stylesheets="@../../../Styles/User/BookingWizard.css"
+      xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" 
+      fx:controller="com.cht.travelmanagement.Controllers.User.BookingWizard.BookingNavigationController">
+   <padding>
+      <Insets bottom="20.0" left="40.0" right="40.0" top="20.0" />
+   </padding>
    <children>
-      <Button fx:id="back_btn" layoutX="79.0" mnemonicParsing="false" text="Back" AnchorPane.leftAnchor="0.0">
+      <!-- Back Button -->
+      <Button fx:id="back_btn" mnemonicParsing="false" styleClass="nav-btn-back" HBox.hgrow="NEVER">
          <graphic>
-            <FontAwesomeIconView glyphName="ARROW_LEFT" />
+            <HBox alignment="CENTER" spacing="8">
+               <FontAwesomeIconView glyphName="ARROW_LEFT" size="14" styleClass="nav-icon-back" />
+               <Label text="Back" styleClass="nav-btn-text-back" />
+            </HBox>
          </graphic>
       </Button>
-      <Label fx:id="status_lbl" alignment="CENTER" layoutX="125.0" layoutY="4.0" prefHeight="17.0" prefWidth="58.0" text="Step 1 of 6" textAlignment="CENTER" AnchorPane.leftAnchor="125.0" AnchorPane.rightAnchor="144.0" />
-      <Button fx:id="next_btn" layoutX="179.0" mnemonicParsing="false" nodeOrientation="RIGHT_TO_LEFT" text="Next" AnchorPane.rightAnchor="0.0">
+      
+      <!-- Spacer -->
+      <Region HBox.hgrow="ALWAYS" />
+      
+      <!-- Step Indicator -->
+      <VBox alignment="CENTER" spacing="2">
+         <Label fx:id="status_lbl" styleClass="step-status-label" text="Step 1 of 6" />
+         <ProgressBar fx:id="nav_progress" prefWidth="120" prefHeight="4" progress="0.166" styleClass="nav-progress-bar" />
+      </VBox>
+      
+      <!-- Spacer -->
+      <Region HBox.hgrow="ALWAYS" />
+      
+      <!-- Next/Finish Button -->
+      <Button fx:id="next_btn" mnemonicParsing="false" styleClass="nav-btn-next" HBox.hgrow="NEVER">
          <graphic>
-            <FontAwesomeIconView glyphName="ARROW_RIGHT" />
+            <HBox alignment="CENTER" spacing="8">
+               <Label text="Next" styleClass="nav-btn-text-next" />
+               <FontAwesomeIconView glyphName="ARROW_RIGHT" size="14" styleClass="nav-icon-next" />
+            </HBox>
          </graphic>
       </Button>
    </children>
-</AnchorPane>
+</HBox>
