--- a/src/main/resources/Views/User/BookingWizard/NewBooking-view.fxml
+++ b/src/main/resources/Views/User/BookingWizard/NewBooking-view.fxml
@@ -2,13 +2,15 @@
 
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane fx:controller="com.cht.travelmanagement.Controllers.User.NewBookingController" fx:id="newBooking_parent" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane fx:id="newBooking_parent" 
+            stylesheets="@../../../Styles/User/BookingWizard.css"
+            xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" 
+            fx:controller="com.cht.travelmanagement.Controllers.User.NewBookingController">
     <top>
-        
         <fx:include source="ProgressIndicator.fxml" BorderPane.alignment="CENTER" />
     </top>
     <center>
-        <fx:include source="BookingStep1-view.fxml" BorderPane.alignment="CENTER"/>
+        <fx:include source="BookingStep1-view.fxml" BorderPane.alignment="CENTER" />
     </center>
     <right>
         <fx:include source="BookingSummary.fxml" BorderPane.alignment="CENTER" />
