--- a/src/main/resources/Views/User/UserMenu-view.fxml
+++ b/src/main/resources/Views/User/UserMenu-view.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-
 <AnchorPane prefHeight="601.0" prefWidth="50.0" styleClass="sidebar-container" stylesheets="@../../Styles/User/UserMenu.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cht.travelmanagement.Controllers.User.UserMenuController">
    <children>
       <VBox alignment="CENTER" prefHeight="70.0" prefWidth="230.0" styleClass="logo-container" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -20,7 +19,7 @@
             </ImageView>
          </children>
       </VBox>
-      <Button fx:id="addBooking_btn" layoutX="30.0" layoutY="114.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="223.0" text="New Booking">
+      <Button fx:id="addBooking_btn" layoutX="30.0" layoutY="114.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="223.0" text="New Booking" AnchorPane.topAnchor="130.0">
          <graphic>
             <FontAwesomeIconView glyphName="PLUS" size="20" />
          </graphic>
@@ -29,7 +28,7 @@
             <String fx:value="menu-button" />
          </styleClass>
       </Button>
-      <VBox layoutX="30.0" layoutY="171.0" prefHeight="400.0" prefWidth="253.0" spacing="5.0" styleClass="menu-container" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0">
+      <VBox layoutX="30.0" layoutY="171.0" prefHeight="400.0" prefWidth="253.0" spacing="5.0" styleClass="menu-container" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="180.0">
          <children>
             <Button fx:id="dashboard_btn" mnemonicParsing="false" styleClass="menu-button" text="Dashboard" VBox.vgrow="ALWAYS">
                <graphic>
